2006-04-05 Apllied Ken's wx deprecation warning patch closing sf patch
           #1465371 - JDH

2006-04-05 Added support for the new API in the postscript backend.
           Allows values to be masked using nan's, and faster file 
           creation - DSD

2006-04-05 Use python's subprocess module for usetex calls to 
           external programs. subprocess catches when they exit
           abnormally so an error can be raised. - DSD

2006-04-03 Fixed the bug in which widgets would not respond to
           events.  This regressed the twinx functionality, so I
           also updated subplots_adjust to update axes that share
           an x or y with a subplot instance. - CM

2006-04-02 Moved PBox class to transforms and deleted pbox.py;
           made pylab axis command a thin wrapper for Axes.axis;
           more tweaks to aspect-ratio handling; fixed Axes.specgram
           to account for the new imshow default of unit aspect
           ratio; made contour set the Axes.dataLim. - EF

2006-03-31 Fixed the Qt "Underlying C/C++ object deleted" bug. - JRE

2006-03-31 Applied Vasily Sulatskov's Qt Navigation Toolbar enhancement. - JRE

2006-03-31 Ported Norbert's rewriting of Halldor's stineman_interp
           algorithm to make it numerix compatible and added code to
           matplotlib.mlab.  See examples/interp_demo.py - JDH

2006-03-30 Fixed a bug in aspect ratio handling; blocked potential
           crashes when panning with button 3; added axis('image')
           support. - EF

2006-03-28 More changes to aspect ratio handling; new PBox class
           in new file pbox.py to facilitate resizing and repositioning
           axes; made PolarAxes maintain unit aspect ratio. - EF

2006-03-23 Refactored TextWithDash class to inherit from, rather than
           delegate to, the Text class. Improves object inspection
           and closes bug # 1357969 - DSD

2006-03-22 Improved aspect ratio handling, including pylab interface.